<resources>
    <string name="app_name">BlockHub</string>
    <string name="createVariable">Create variable</string>
    <string name="createVariableDescription">Creates a variable with specified name</string>
    <string name="assignVariable">Assign value variable</string>
    <string name="assignVariableDescription">Assigns a value to a previously declared variable</string>
    <string name="printVariableValue">Print variable</string>
    <string name="printVariableValueDescription">Prints values of specified variables</string>
    <string name="createVariableAnnotation">Of type: </string>
    <string name="expressionFieldHint">Value</string>
    <string name="variableFieldHint">Name</string>
    <string name="runButtonText">RUN CODE</string>
    <string-array name="variableTypes">
        <item>Bool</item>
        <item>Integer</item>
        <item>Double</item>
    </string-array>
</resources>