<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/crossButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/createVariable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundcorners"
                android:orientation="vertical"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:fontFamily="@font/aa_batho"
                    android:lineSpacingExtra="-16dp"
                    android:text="@string/createVariable"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:fontFamily="@font/aa_batho"
                    android:lineSpacingExtra="-8dp"
                    android:text="@string/createVariableDescription"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/assignVariable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/roundcorners"
                android:gravity="right"
                android:orientation="vertical"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:fontFamily="@font/aa_batho"
                    android:gravity="right"
                    android:lineSpacingExtra="-16dp"
                    android:text="@string/assignVariable"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:fontFamily="@font/aa_batho"
                    android:gravity="right"
                    android:lineSpacingExtra="-8dp"
                    android:text="@string/assignVariableDescription"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/printVariable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/roundcorners"
                android:gravity="left"
                android:orientation="vertical"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:fontFamily="@font/aa_batho"
                    android:lineSpacingExtra="-16dp"
                    android:text="@string/printVariableValue"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:fontFamily="@font/aa_batho"
                    android:lineSpacingExtra="-8dp"
                    android:text="@string/printVariableValueDescription"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <ImageButton
        android:id="@+id/crossButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/roundcorners"
        android:backgroundTint="@color/orange"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_cross_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

</androidx.constraintlayout.widget.ConstraintLayout>